# SimpleSELauncher

./: .editorconfig  .gitattributes  README.md  meson.build
cross/: x86_64-w64-mingw32.txt
src/: launcher.rc  launcher_choice.cpp  launcher_choice.hpp  launcher_frame.cpp  launcher_frame.hpp  launcher_main.cpp  launcher_main.hpp  launcher_splash.cpp  launcher_splash.hpp  launcher_utils.cpp  launcher_utils.hpp  meson.build
src/res/: background.jpg.h  launcher.png.h  splash.png.h  title.png.h
